--- a/english.html
+++ b/english.html
@@ -3,7 +3,7 @@
 <head>
 <title>English</title>
 <link rel="stylesheet" type="text/css" href="css/logo.css">
-<link rel="stylesheet" type="text/css" href="css/index.css">
+<link rel="stylesheet" type="text/css" href="css/english.css">
 </head>
 <body>
 
