--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <button onclick="document.location='index.html'">Home</button>
   <button onclick="document.location='english.html'">English</button>
 </nav>
+  
+<aside>
+  <p>This website contains all of the necessary websites I need to use for school.</p>
+</aside>
 
 </body>
 </html>
