--- a/english.html
+++ b/english.html
@@ -17,8 +17,10 @@
 </nav>
 
 <aside>
-  <a href="https://dublin.schoology.com/course/2797225916/materials">Schoology</a>
-  <a href="https://docs.google.com/presentation/d/1OuN5uMjwe-Ybmp-uZ8yN6LLi8T-87PW54v10Crm55go/edit#slide=id.p">Reading Journal</a>
+  <ul>
+    <li><a href="https://dublin.schoology.com/course/2797225916/materials">Schoology</a></li>
+    <li><a href="https://docs.google.com/presentation/d/1OuN5uMjwe-Ybmp-uZ8yN6LLi8T-87PW54v10Crm55go/edit#slide=id.p">Reading Journal</a></li>
+  <ul>
 </aside>
 
 </body>
