--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   
 <aside>
   <p>This website contains all of the necessary websites I need to use for school.</p>
+  <br>
+  <p><b>Plans:</b> Switch all Hyperlinks to images</p>
 </aside>
 
 </body>
