--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
 <aside>
   <p>This website contains all of the necessary websites I need to use for school.</p>
-  <p><b>Plans:</b> Switch all Hyperlinks to images</p>
+  <p><b>Plans:</b> Switch all Hyperlinks to images.</p>
 </aside>
 
 </body>
