--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </header>
 
 <nav>
-  <button onclick="document.location='index.html'">Home</button>
-  <button onclick="document.location='english.html'">English</button>
+  <div class="navbutton">
+    <button onclick="document.location='index.html'">Home</button>
+    <button onclick="document.location='english.html'">English</button>
+  </div>
 </nav>
   
 <aside>
