--- a/english.html
+++ b/english.html
@@ -12,10 +12,12 @@
 </header>
 
 <nav>
-  <button onclick="document.location='index.html'">Home</button>
-  <button onclick="document.location='english.html'">English</button>
+  <div class="navbutton">
+    <button onclick="document.location='index.html'">Home</button>
+    <button onclick="document.location='english.html'">English</button>
+  </div>
 </nav>
-
+  
 <aside>
   <br>
   <ul>
