--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <nav>
   <button onclick="document.location='index.html'">Home</button>
   <button onclick="document.location='english.html'">English</button>
+  <button onclick="document.location='algebra.html'">Algebra</button>
 </nav>
   
 <aside>
