--- a/algebra.html
+++ b/algebra.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>English</title>
+<title>Algebra</title>
 <link rel="stylesheet" type="text/css" href="css/logo.css">
-<link rel="stylesheet" type="text/css" href="css/english.css">
+<link rel="stylesheet" type="text/css" href="css/algebra.css">
 </head>
 <body>
 
