--- a/algebra.html
+++ b/algebra.html
@@ -18,6 +18,10 @@
 </nav>
   
 <aside>
+  <ul>
+    <li><a href="https://dublin.schoology.com/course/2797226797/materials" target="_blank">Schoology</a></li>
+    <li><a href="https://www.aleks.com/" target="_blank">Aleks</a></li>
+  <ul>
 </aside>
 
 </body>
