--- a/english.html
+++ b/english.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <title>English</title>
-<link rel="stylesheet" type="text/css" href="css/logo.css">
-<link rel="stylesheet" type="text/css" href="css/english.css">
+<link rel="stylesheet" type="text/css" href="pages.css">
 </head>
 <body>
 
