--- a/algebra.html
+++ b/algebra.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <title>Algebra</title>
-<link rel="stylesheet" type="text/css" href="css/logo.css">
-<link rel="stylesheet" type="text/css" href="css/algebra.css">
+<link rel="stylesheet" type="text/css" href="pages.css">
 </head>
 <body>
 
