--- a/classes/english.html
+++ b/classes/english.html
@@ -11,7 +11,7 @@
 </header>
 
 <nav>
-  <button onclick="document.location='index.html'">Home</button>
+  <button onclick="document.location='../index.html'">Home</button>
   <button onclick="document.location='english.html'">English</button>
   <button onclick="document.location='algebra.html'">Algebra</button>
 </nav>
