--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <nav>
   <button onclick="document.location='index.html'">Home</button>
-  <button onclick="document.location='english.html'">English</button>
-  <button onclick="document.location='algebra.html'">Algebra</button>
+  <button onclick="document.location='classes/english.html'">English</button>
+  <button onclick="document.location='classes/algebra.html'">Algebra</button>
 </nav>
   
 <aside>
