--- a/classes/algebra.html
+++ b/classes/algebra.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Algebra</title>
-<link rel="stylesheet" type="text/css" href="pages.css">
+<link rel="stylesheet" type="text/css" href="../pages.css">
 </head>
 <body>
 
