--- a/classes/english.html
+++ b/classes/english.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>English</title>
-<link rel="stylesheet" type="text/css" href="pages.css">
+<link rel="stylesheet" type="text/css" href="../pages.css">
 </head>
 <body>
 
