--- a/classes/algebra.html
+++ b/classes/algebra.html
@@ -13,6 +13,7 @@
 <nav>
   <button onclick="document.location='../index.html'">Home</button>
   <button onclick="document.location='english.html'">English</button>
+  <button onclick="document.location='history.html'">History</button>
   <button onclick="document.location='algebra.html'">Algebra</button>
 </nav>
   
