--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <nav>
   <button onclick="document.location='index.html'">Home</button>
   <button onclick="document.location='classes/english.html'">English</button>
+  <button onclick="document.location='classes/history.html'">History</button>
   <button onclick="document.location='classes/algebra.html'">Algebra</button>
 </nav>
   
