--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 <aside>
   <p>This website contains all of the necessary websites I need to use for school.</p>
   <p><b>Plans:</b> Switch all Hyperlinks to images.</p>
+  <br>
+  <ul>
+    <li><a href="https://dublin.schoology.com/home" target="_blank">Schoology</a></li>
+    <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a></li>
+    <li><a href="https://dashboard.dublinschools.net/students/index.php" target="_blank">Student Dashboard</a></li>
+    <li><a href="https://www.dublinschools.net/" target="Dublin Schools>Gmail</a></li>
+  <ul>
 </aside>
 
 </body>
