--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li><a href="https://dublin.schoology.com/home" target="_blank">Schoology</a></li>
     <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a></li>
     <li><a href="https://dashboard.dublinschools.net/students/index.php" target="_blank">Student Dashboard</a></li>
-    <li><a href="https://www.dublinschools.net/" target="Dublin Schools>Gmail</a></li>
+    <li><a href="https://www.dublinschools.net/" target="Dublin Schools">Gmail</a></li>
   <ul>
 </aside>
 
