--- a/classes/algebra.html
+++ b/classes/algebra.html
@@ -20,7 +20,7 @@
 <aside>
   <ul>
     <li><a href="https://dublin.schoology.com/course/2797226797/materials" target="_blank">Schoology</a></li>
-    <li><a href="https://docs.google.com/spreadsheets/d/1gL2uXfOJPaORFlihcLo1J0y74HmnK-EtBp0GcMVDUXc/edit#gid=1509921924" target="_blank">Calander</a></li>
+    <li><a href="https://docs.google.com/spreadsheets/d/1gL2uXfOJPaORFlihcLo1J0y74HmnK-EtBp0GcMVDUXc/edit?usp=sharing" target="_blank">Calander</a></li>
     <li><a href="https://www.aleks.com/" target="_blank">Aleks</a></li>
   <ul>
 </aside>
