--- a/classes/english.html
+++ b/classes/english.html
@@ -20,7 +20,7 @@
 <aside>
   <ul>
     <li><a href="https://dublin.schoology.com/course/2797225916/materials" target="_blank">Schoology</a></li>
-    <li><a href="https://docs.google.com/presentation/d/1OuN5uMjwe-Ybmp-uZ8yN6LLi8T-87PW54v10Crm55go/edit#slide=id.p" target="_blank">Reading Journal</a></li>
+    <li><a href="https://docs.google.com/presentation/d/1OuN5uMjwe-Ybmp-uZ8yN6LLi8T-87PW54v10Crm55go/edit?usp=sharing" target="_blank">Reading Journal</a></li>
   <ul>
 </aside>
 
