--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <nav>
   <button onclick="document.location='index.html'">Home</button>
+  <button onclick="document.location='classes/science.html'">Science</button>
   <button onclick="document.location='classes/english.html'">English</button>
   <button onclick="document.location='classes/history.html'">History</button>
   <button onclick="document.location='classes/algebra.html'">Algebra</button>
@@ -23,7 +24,9 @@
   <br>
   <ul>
     <li><a href="https://dublin.schoology.com/home" target="_blank">Schoology</a></li>
+    <li><a href="https://drive.google.com/drive/my-drive" target="_blank">Google Drive</a></li>
     <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a></li>
+    <li><a href="https://meet.google.com/" target="_blank">Google Meets</a></li>
     <li><a href="https://dashboard.dublinschools.net/students/index.php" target="_blank">Student Dashboard</a></li>
     <li><a href="https://www.dublinschools.net/" target="_blank">Dublin Schools</a></li>
   <ul>
