--- a/classes/english.html
+++ b/classes/english.html
@@ -12,6 +12,7 @@
 
 <nav>
   <button onclick="document.location='../index.html'">Home</button>
+  <button onclick="document.location='science.html'">Science</button>
   <button onclick="document.location='english.html'">English</button>
   <button onclick="document.location='history.html'">History</button>
   <button onclick="document.location='algebra.html'">Algebra</button>
