--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <nav>
   <button onclick="document.location='index.html'">Home</button>
   <button onclick="document.location='classes/science.html'">Science</button>
+  <button onclick="document.location='classes/freshman-advisory.html'">Freshman Advisory</button>
   <button onclick="document.location='classes/english.html'">English</button>
+  <button onclick="document.location='classes/Band.html'">Band</button>
   <button onclick="document.location='classes/history.html'">History</button>
+  <button onclick="document.location='classes/spanish.html'">Spanish</button>
   <button onclick="document.location='classes/algebra.html'">Algebra</button>
 </nav>
   
