--- a/classes/history.html
+++ b/classes/history.html
@@ -13,8 +13,11 @@
 <nav>
   <button onclick="document.location='../index.html'">Home</button>
   <button onclick="document.location='science.html'">Science</button>
+  <button onclick="document.location='freshman-advisory.html'">Freshman Advisory</button>
   <button onclick="document.location='english.html'">English</button>
+  <button onclick="document.location='band.html'">Band</button>
   <button onclick="document.location='history.html'">History</button>
+  <button onclick="document.location='spanish.html'">Spanish</button>
   <button onclick="document.location='algebra.html'">Algebra</button>
 </nav>
   
