--- a/classes/band.html
+++ b/classes/band.html
@@ -24,7 +24,7 @@
 <aside>
   <ul>
     <li><a href="https://dublin.schoology.com/course/2797231033/materials" target="_blank">Schoology</a></li>
-    <li><a href="https://www.charmsoffice.com/public/parents.asp" target="_blank">Charms/a></li>
+    <li><a href="https://www.charmsoffice.com/public/parents.asp" target="_blank">Charms</a></li>
   <ul>
 </aside>
 
