--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </header>
 
 <nav>
-  <button onclick="document.location='index.html'">Home</button>
-  <button onclick="document.location='classes/science.html'">Science</button>
-  <button onclick="document.location='classes/freshman-advisory.html'">Freshman Advisory</button>
-  <button onclick="document.location='classes/english.html'">English</button>
-  <button onclick="document.location='classes/band.html'">Band</button>
-  <button onclick="document.location='classes/history.html'">History</button>
-  <button onclick="document.location='classes/spanish.html'">Spanish</button>
-  <button onclick="document.location='classes/algebra.html'">Algebra</button>
+  <button class="navigation" onclick="document.location='index.html'">Home</button>
+  <button class="navigation" onclick="document.location='classes/science.html'">Science</button>
+  <button class="navigation" onclick="document.location='classes/freshman-advisory.html'">Freshman Advisory</button>
+  <button class="navigation" onclick="document.location='classes/english.html'">English</button>
+  <button class="navigation" onclick="document.location='classes/band.html'">Band</button>
+  <button class="navigation" onclick="document.location='classes/history.html'">History</button>
+  <button class="navigation" onclick="document.location='classes/spanish.html'">Spanish</button>
+  <button class="navigation" onclick="document.location='classes/algebra.html'">Algebra</button>
 </nav>
   
 <aside>
