--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <li><a href="https://meet.google.com/" target="_blank">Google Meets</a></li>
     <li><a href="https://dashboard.dublinschools.net/students/index.php" target="_blank">Student Dashboard</a></li>
     <li><a href="https://www.dublinschools.net/" target="_blank">Dublin Schools</a></li>
+    <li><a href="https://quizlet.com/live" target="_blank">Quizlet Live</a></li>
+    <li><a href="https://kahoot.it/" target="_blank">Kahoot</a></li>
+    <li><a href="https://www.gimkit.com/play" target="_blank">Gimkit</a></li>
   <ul>
 </aside>
 
