--- a/classes/english.html
+++ b/classes/english.html
@@ -3,6 +3,7 @@
 <head>
 <title>English</title>
 <link rel="stylesheet" type="text/css" href="../pages.css">
+<link rel="stylesheet" type="text/css" href="../navigation.css">
 </head>
 <body>
 
