--- a/classes/history.html
+++ b/classes/history.html
@@ -26,8 +26,8 @@
   <ul>
     <li><a href="https://dublin.schoology.com/course/2797231023/materials" target="_blank">Schoology</a></li>
     <li><a href="https://my.mheducation.com/secure/student/urn:com.mheducation.openlearning:enterprise.identity.organization:prod.global:organization:8f825cc0-e01d-43e1-ae87-7b2e966af4e5/home" target="_blank">Online Textbook</a></li>
-    <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Terms - Chapter 8: Scientific Revolution</a></li>
-    <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Terms - Chapter 9: French Revolution</a></li>
+    <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Chapter 8: Scientific Revolution - Quizlet</a></li>
+    <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Chapter 9: French Revolution - Quizlet</a></li>
   <ul>
 </aside>
 
