--- a/index.html
+++ b/index.html
@@ -26,17 +26,27 @@
   <p>This website contains all of the necessary websites I need to use for school.</p>
   <p><b>Plans:</b> Switch all Hyperlinks to images.</p>
   <br>
-  <ul>
-    <li><a href="https://dublin.schoology.com/home" target="_blank">Schoology</a></li>
-    <li><a href="https://drive.google.com/drive/my-drive" target="_blank">Google Drive</a></li>
-    <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a></li>
-    <li><a href="https://meet.google.com/" target="_blank">Google Meets</a></li>
-    <li><a href="https://dashboard.dublinschools.net/students/index.php" target="_blank">Student Dashboard</a></li>
-    <li><a href="https://www.dublinschools.net/" target="_blank">Dublin Schools</a></li>
-    <li><a href="https://quizlet.com/live" target="_blank">Quizlet Live</a></li>
-    <li><a href="https://kahoot.it/" target="_blank">Kahoot</a></li>
-    <li><a href="https://www.gimkit.com/play" target="_blank">Gimkit</a></li>
-  <ul>
+  <div class="dublin">
+    <ul>
+      <li><a href="https://dublin.schoology.com/home" target="_blank">Schoology</a></li>
+      <li><a href="https://dashboard.dublinschools.net/students/index.php" target="_blank">Student Dashboard</a></li>
+      <li><a href="https://www.dublinschools.net/" target="_blank">Dublin Schools</a></li>
+    </ul>
+  </div>
+  <div class="google">
+    <ul>
+      <li><a href="https://drive.google.com/drive/my-drive" target="_blank">Google Drive</a></li>
+      <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a></li>
+      <li><a href="https://meet.google.com/" target="_blank">Google Meets</a></li>
+    </ul>
+  </div>
+  <div class="games">
+    <ul>
+      <li><a href="https://quizlet.com/live" target="_blank">Quizlet Live</a></li>
+      <li><a href="https://kahoot.it/" target="_blank">Kahoot</a></li>
+      <li><a href="https://www.gimkit.com/play" target="_blank">Gimkit</a></li>
+    </ul>
+  </div>
 </aside>
 
 </body>
