--- a/index.html
+++ b/index.html
@@ -26,23 +26,25 @@
   <p>This website contains all of the necessary websites I need to use for school.</p>
   <p><b>Plans:</b> Switch all Hyperlinks to images.</p>
   <br>
-  <div class="websites">
-    <h2><u>Dublin</u></h2>
-    <li><a href="https://dublin.schoology.com/home" target="_blank">Schoology</a></li>
-    <li><a href="https://dashboard.dublinschools.net/students/index.php" target="_blank">Student Dashboard</a></li>
-    <li><a href="https://www.dublinschools.net/" target="_blank">Dublin Schools</a></li>
-  </div>
-  <div class="websites">
-    <h2><u>Google</u></h2>
-    <li><a href="https://drive.google.com/drive/my-drive" target="_blank">Google Drive</a></li>
-    <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a></li>
-    <li><a href="https://meet.google.com/" target="_blank">Google Meets</a></li>
-  </div>
-  <div class="websites">
-    <h2><u>Games</u></h2>
-    <li><a href="https://quizlet.com/live" target="_blank">Quizlet Live</a></li>
-    <li><a href="https://kahoot.it/" target="_blank">Kahoot</a></li>
-    <li><a href="https://www.gimkit.com/play" target="_blank">Gimkit</a></li>
+  <div class="home-align">
+    <div class="websites">
+      <h2><u>Dublin</u></h2>
+      <li><a href="https://dublin.schoology.com/home" target="_blank">Schoology</a></li>
+      <li><a href="https://dashboard.dublinschools.net/students/index.php" target="_blank">Student Dashboard</a></li>
+      <li><a href="https://www.dublinschools.net/" target="_blank">Dublin Schools</a></li>
+    </div>
+    <div class="websites">
+      <h2><u>Google</u></h2>
+      <li><a href="https://drive.google.com/drive/my-drive" target="_blank">Google Drive</a></li>
+      <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a></li>
+      <li><a href="https://meet.google.com/" target="_blank">Google Meets</a></li>
+    </div>
+    <div class="websites">
+      <h2><u>Games</u></h2>
+      <li><a href="https://quizlet.com/live" target="_blank">Quizlet Live</a></li>
+      <li><a href="https://kahoot.it/" target="_blank">Kahoot</a></li>
+      <li><a href="https://www.gimkit.com/play" target="_blank">Gimkit</a></li>
+    </div>
   </div>
   <br><br><br><br><br><br><br><br>
 </aside>
