--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </header>
 
 <nav>
-  <button class="home" onclick="document.location='index.html'">Home</button>
-  <button class="science" onclick="document.location='classes/science.html'">Science</button>
-  <button class="freshman-advisory" onclick="document.location='classes/freshman-advisory.html'">Freshman Advisory</button>
-  <button class="english" onclick="document.location='classes/english.html'">English</button>
-  <button class="band" onclick="document.location='classes/band.html'">Band</button>
-  <button class="history" onclick="document.location='classes/history.html'">History</button>
-  <button class="spanish" onclick="document.location='classes/spanish.html'">Spanish</button>
-  <button class="algebra" onclick="document.location='classes/algebra.html'">Algebra</button>
+  <button class="home" onclick="home()">Home</button>
+  <button class="science" onclick="science()">Science</button>
+  <button class="freshman-advisory" onclick="freshman-advisory()">Freshman Advisory</button>
+  <button class="english" onclick="english()">English</button>
+  <button class="band" onclick="band()">Band</button>
+  <button class="history" onclick="history()">History</button>
+  <button class="spanish" onclick="spanish()">Spanish</button>
+  <button class="algebra" onclick="algebra()">Algebra</button>
 </nav>
   
 <aside>
