--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <button class="history" onclick="history()">History</button>
   <button class="spanish" onclick="spanish()">Spanish</button>
   <button class="algebra" onclick="algebra()">Algebra</button>
+  <script src="pages.js"></script>
 </nav>
   
 <aside>
