--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>School Websites</title>
-<link rel="stylesheet" type="text/css" href="pages.css">
-<link rel="stylesheet" type="text/css" href="navigation.css">
+<link rel="stylesheet" type="text/css" href="css/pages.css">
+<link rel="stylesheet" type="text/css" href="css/navigation.css">
 <script src="pages.js"></script>
 </head>
 <body>
