--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="pages.js"></script>
   <button class="home" onclick="home()">Home</button>
   <button class="science" onclick="science()">Science</button>
-  <button class="freshman_advisory" onclick="freshman-advisory()">Freshman Advisory</button>
+  <button class="freshman-advisory" onclick="freshman_advisory()">Freshman Advisory</button>
   <button class="english" onclick="english()">English</button>
   <button class="band" onclick="band()">Band</button>
   <button class="history" onclick="history()">History</button>
