--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </header>
 
 <nav>
-  <script src="pages.js"></script>
+  <script src="js/index.js"></script>
   <button class="home" onclick="home()">Home</button>
   <button class="science" onclick="science()">Science</button>
   <button class="freshman-advisory" onclick="freshman_advisory()">Freshman Advisory</button>
