--- a/classes/history.html
+++ b/classes/history.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>History</title>
-<link rel="stylesheet" type="text/css" href="../pages.css">
-<link rel="stylesheet" type="text/css" href="../navigation.css">
+<link rel="stylesheet" type="text/css" href="../css/pages.css">
+<link rel="stylesheet" type="text/css" href="../css/navigation.css">
 </head>
 <body>
 
@@ -23,12 +23,10 @@
 </nav>
   
 <aside>
-  <ul>
-    <li><a href="https://dublin.schoology.com/course/2797231023/materials" target="_blank">Schoology</a></li>
-    <li><a href="https://my.mheducation.com/secure/student/urn:com.mheducation.openlearning:enterprise.identity.organization:prod.global:organization:8f825cc0-e01d-43e1-ae87-7b2e966af4e5/home" target="_blank">Online Textbook</a></li>
-    <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Quizlet - Chapter 8: Scientific Revolution</a></li>
-    <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Quizlet - Chapter 9: French Revolution</a></li>
-  <ul>
+  <li><a href="https://dublin.schoology.com/course/2797231023/materials" target="_blank">Schoology</a></li>
+  <li><a href="https://my.mheducation.com/secure/student/urn:com.mheducation.openlearning:enterprise.identity.organization:prod.global:organization:8f825cc0-e01d-43e1-ae87-7b2e966af4e5/home" target="_blank">Online Textbook</a></li>
+  <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Quizlet - Chapter 8: Scientific Revolution</a></li>
+  <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Quizlet - Chapter 9: French Revolution</a></li>
 </aside>
 
 </body>
