--- a/classes/history.html
+++ b/classes/history.html
@@ -12,21 +12,30 @@
 </header>
 
 <nav>
-  <button class="home" onclick="document.location='../index.html'">Home</button>
-  <button class="science" onclick="document.location='science.html'">Science</button>
-  <button class="freshman-advisory" onclick="document.location='freshman-advisory.html'">Freshman Advisory</button>
-  <button class="english" onclick="document.location='english.html'">English</button>
-  <button class="band" onclick="document.location='band.html'">Band</button>
-  <button class="history" onclick="document.location='history.html'">History</button>
-  <button class="spanish" onclick="document.location='spanish.html'">Spanish</button>
-  <button class="algebra" onclick="document.location='algebra.html'">Algebra</button>
+  <script src="../js/classes.js"></script>
+  <button class="home" onclick="home()">Home</button>
+  <button class="science" onclick="science()">Science</button>
+  <button class="freshman-advisory" onclick="freshman_advisory()">Freshman Advisory</button>
+  <button class="english" onclick="english()">English</button>
+  <button class="band" onclick="band()">Band</button>
+  <button class="history" onclick="history()">History</button>
+  <button class="spanish" onclick="spanish()">Spanish</button>
+  <button class="algebra" onclick="algebra()">Algebra</button>
 </nav>
   
 <aside>
-  <li><a href="https://dublin.schoology.com/course/2797231023/materials" target="_blank">Schoology</a></li>
-  <li><a href="https://my.mheducation.com/secure/student/urn:com.mheducation.openlearning:enterprise.identity.organization:prod.global:organization:8f825cc0-e01d-43e1-ae87-7b2e966af4e5/home" target="_blank">Online Textbook</a></li>
-  <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Quizlet - Chapter 8: Scientific Revolution</a></li>
-  <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Quizlet - Chapter 9: French Revolution</a></li>
+  <div class="history-align">
+    <div class="websites">
+      <h2><u>Essentials</u></h2>
+      <li><a href="https://dublin.schoology.com/course/2797231023/materials" target="_blank">Schoology</a></li>
+      <li><a href="https://my.mheducation.com/secure/student/urn:com.mheducation.openlearning:enterprise.identity.organization:prod.global:organization:8f825cc0-e01d-43e1-ae87-7b2e966af4e5/home" target="_blank">Online Textbook</a></li>
+    </div>
+    <div class="websites">
+      <h2><u>Terms</u></h2>
+      <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Chapter 8: Scientific Revolution</a></li>
+      <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Chapter 9: French Revolution</a></li>
+    </div>
+    <br><br><br><br><br><br><br>
 </aside>
 
 </body>
