--- a/classes/history.html
+++ b/classes/history.html
@@ -35,6 +35,7 @@
       <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Chapter 8: Scientific Revolution</a></li>
       <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Chapter 9: French Revolution</a></li>
     </div>
+  </div>
     <br><br><br><br><br><br><br>
 </aside>
 
