--- a/classes/english.html
+++ b/classes/english.html
@@ -23,10 +23,17 @@
 </nav>
   
 <aside>
-  <ul>
-    <li><a href="https://dublin.schoology.com/course/2797225916/materials" target="_blank">Schoology</a></li>
-    <li><a href="https://docs.google.com/presentation/d/1OuN5uMjwe-Ybmp-uZ8yN6LLi8T-87PW54v10Crm55go/edit?usp=sharing" target="_blank">Reading Journal</a></li>
-  <ul>
+  <div class="english-align">
+    <div class="websites">
+      <h2><u>Essentials</u></h2>
+      <li><a href="https://dublin.schoology.com/course/2797225916/materials" target="_blank">Schoology</a></li>
+    </div>
+    <div class="websites">
+      <h2><u>Writing Documents</u></h2>
+      <li><a href="https://docs.google.com/presentation/d/1OuN5uMjwe-Ybmp-uZ8yN6LLi8T-87PW54v10Crm55go/edit?usp=sharing" target="_blank">Reading Journal</a></li>
+    </div>
+  </div>
+  <br><br><br><br><br><br>
 </aside>
 
 </body>
