--- a/classes/english.html
+++ b/classes/english.html
@@ -12,7 +12,7 @@
 </header>
 
 <nav>
-  <script src="../js/index.js"></script>
+  <script src="../js/classes.js"></script>
   <button class="home" onclick="home()">Home</button>
   <button class="science" onclick="science()">Science</button>
   <button class="freshman-advisory" onclick="freshman_advisory()">Freshman Advisory</button>
