--- a/classes/algebra.html
+++ b/classes/algebra.html
@@ -27,6 +27,8 @@
     <li><a href="https://dublin.schoology.com/course/2797226797/materials" target="_blank">Schoology</a></li>
     <li><a href="https://docs.google.com/spreadsheets/d/1gL2uXfOJPaORFlihcLo1J0y74HmnK-EtBp0GcMVDUXc/edit?usp=sharing" target="_blank">Calander</a></li>
     <li><a href="https://www.aleks.com/" target="_blank">Aleks</a></li>
+    <li><a href="https://www.desmos.com/scientific" target="_blank">Scientific Calculator</a></li>
+    <li><a href="https://www.desmos.com/calculator" target="_blank">Graphing Calculator</a></li>
   <ul>
 </aside>
 
