--- a/classes/algebra.html
+++ b/classes/algebra.html
@@ -23,13 +23,19 @@
 </nav>
 
 <aside>
-  <ul>
-    <li><a href="https://dublin.schoology.com/course/2797226797/materials" target="_blank">Schoology</a></li>
-    <li><a href="https://docs.google.com/spreadsheets/d/1gL2uXfOJPaORFlihcLo1J0y74HmnK-EtBp0GcMVDUXc/edit?usp=sharing" target="_blank">Calander</a></li>
-    <li><a href="https://www.aleks.com/" target="_blank">Aleks</a></li>
-    <li><a href="https://www.desmos.com/scientific" target="_blank">Scientific Calculator</a></li>
-    <li><a href="https://www.desmos.com/calculator" target="_blank">Graphing Calculator</a></li>
-  <ul>
+  <div class="algebra-align">
+    <div class="websites">
+      <h2><u>Essentials</u></h2>
+      <li><a href="https://dublin.schoology.com/course/2797226797/materials" target="_blank">Schoology</a></li>
+      <li><a href="https://docs.google.com/spreadsheets/d/1gL2uXfOJPaORFlihcLo1J0y74HmnK-EtBp0GcMVDUXc/edit?usp=sharing" target="_blank">Calander</a></li>
+      <li><a href="https://www.aleks.com/" target="_blank">Aleks</a></li>
+    </div>
+    <div class="websites">
+      <h2><u>Calculators</u></h2>
+      <li><a href="https://www.desmos.com/scientific" target="_blank">Scientific Calculator</a></li>
+      <li><a href="https://www.desmos.com/calculator" target="_blank">Graphing Calculator</a></li>
+    </div>
+  </div>
 </aside>
 
 </body>
