--- a/classes/english.html
+++ b/classes/english.html
@@ -30,7 +30,7 @@
       <li><a href="https://dublin.schoology.com/course/2797225916/materials" target="_blank">Schoology</a></li>
     </div>
     <div class="websites">
-      <h2><u>Writing Documents</u></h2>
+      <h2><u>Documents</u></h2>
       <li><a href="https://docs.google.com/presentation/d/1OuN5uMjwe-Ybmp-uZ8yN6LLi8T-87PW54v10Crm55go/edit?usp=sharing" target="_blank">Reading Journal</a></li>
     </div>
   </div>
