--- a/classes/science.html
+++ b/classes/science.html
@@ -12,14 +12,7 @@
 </header>
   
 <nav>
-  <button class="home" onclick="document.location='../index.html'">Home</button>
-  <button class="science" onclick="document.location='science.html'">Science</button>
-  <button class="freshman-advisory" onclick="document.location='freshman-advisory.html'">Freshman Advisory</button>
-  <button class="english" onclick="document.location='english.html'">English</button>
-  <button class="band" onclick="document.location='band.html'">Band</button>
-  <button class="history" onclick="document.location='history.html'">History</button>
-  <button class="spanish" onclick="document.location='spanish.html'">Spanish</button>
-  <button class="algebra" onclick="document.location='algebra.html'">Algebra</button>
+  <object data="classes-navigation.html" width="1000" height="1000">
 </nav>
   
 <aside>
