--- a/classes/science.html
+++ b/classes/science.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Science</title>
-<link rel="stylesheet" type="text/css" href="../pages.css">
-<link rel="stylesheet" type="text/css" href="../navigation.css">
+<link rel="stylesheet" type="text/css" href="../css/pages.css">
+<link rel="stylesheet" type="text/css" href="../css/navigation.css">
 </head>
 <body>
 
@@ -24,11 +24,14 @@
 </nav>
   
 <aside>
-  <ul>
-    <li><a href="https://dublin.schoology.com/course/2797228409/materials" target="_blank">Schoology</a></li>
-    <li><a href="https://docs.google.com/spreadsheets/d/1JO-YD-voC6x3ABNmdDvMp8kNXs0GSIvevfisHlqodC8/edit?usp=sharing" target="_blank">Agenda</a></li>
-  <ul>
+  <div class="science-align">
+    <div class="websites">
+      <h2><u>Essentials</u></h2>
+      <li><a href="https://dublin.schoology.com/course/2797228409/materials" target="_blank">Schoology</a></li>
+      <li><a href="https://docs.google.com/spreadsheets/d/1JO-YD-voC6x3ABNmdDvMp8kNXs0GSIvevfisHlqodC8/edit?usp=sharing" target="_blank">Agenda</a></li>
+    </div>
+  </div>
 </aside>
-
+  
 </body>
 </html>
