--- a/classes/history.html
+++ b/classes/history.html
@@ -28,7 +28,7 @@
     <div class="websites">
       <h2><u>Essentials</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797231023/materials" target="_blank">Schoology</a></li>
-      <li><a href="https://my.mheducation.com/secure/student/urn:com.mheducation.openlearning:enterprise.identity.organization:prod.global:organization:8f825cc0-e01d-43e1-ae87-7b2e966af4e5/home" target="_blank">Online Textbook</a></li>
+      <li><a href="https://connected.mcgraw-hill.com/ssh/dashboard.do?bookId=GBOPBD8V7SE4BQOSJPRBQQ4HJQ" target="_blank">Online Textbook</a></li>
     </div>
     <div class="websites">
       <h2><u>Terms</u></h2>
