--- a/classes/history.html
+++ b/classes/history.html
@@ -28,7 +28,7 @@
     <div class="websites">
       <h2><u>Essentials</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797231023/materials" target="_blank">Schoology</a></li>
-      <li><a href="https://connected.mcgraw-hill.com/ssh/dashboard.do?bookId=GBOPBD8V7SE4BQOSJPRBQQ4HJQ" target="_blank">Online Textbook</a></li>
+      <li><a href="https://accounts.google.com/o/saml2/initsso?idpid=C042snwgs&spid=407634188412&forceauthn=false" target="_blank">Online Textbook</a></li>
     </div>
     <div class="websites">
       <h2><u>Terms</u></h2>
