--- a/classes/spanish.html
+++ b/classes/spanish.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Spanish</title>
-<link rel="stylesheet" type="text/css" href="../pages.css">
-<link rel="stylesheet" type="text/css" href="../navigation.css">
+<link rel="stylesheet" type="text/css" href="../css/pages.css">
+<link rel="stylesheet" type="text/css" href="../css/navigation.css">
 </head>
 <body>
 
@@ -12,19 +12,21 @@
 </header>
 
 <nav>
-  <button class="home" onclick="document.location='../index.html'">Home</button>
-  <button class="science" onclick="document.location='science.html'">Science</button>
-  <button class="freshman-advisory" onclick="document.location='freshman-advisory.html'">Freshman Advisory</button>
-  <button class="english" onclick="document.location='english.html'">English</button>
-  <button class="band" onclick="document.location='band.html'">Band</button>
-  <button class="history" onclick="document.location='history.html'">History</button>
-  <button class="spanish" onclick="document.location='spanish.html'">Spanish</button>
-  <button class="algebra" onclick="document.location='algebra.html'">Algebra</button>
+  <script src="../js/classes.js"></script>
+  <button class="home" onclick="home()">Home</button>
+  <button class="science" onclick="science()">Science</button>
+  <button class="freshman-advisory" onclick="freshman_advisory()">Freshman Advisory</button>
+  <button class="english" onclick="english()">English</button>
+  <button class="band" onclick="band()">Band</button>
+  <button class="history" onclick="history()">History</button>
+  <button class="spanish" onclick="spanish()">Spanish</button>
+  <button class="algebra" onclick="algebra()">Algebra</button>
 </nav>
   
 <aside>
   <ul>
     <li><a href="https://dublin.schoology.com/course/2797225371/materials" target="_blank">Schoology</a></li>
+    <li><a href="https://www.wordreference.com/" target="_blank">Word Reference</a></li>
   <ul>
 </aside>
 
