--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 </nav>
   
 <aside>
-  <p>This website contains all of the necessary websites I need to use for school.</p>
+  <div class="summary">
+    <p>This website contains all of the necessary websites I need to use for school.</p>
+  </div>
   <br>
   <div class="home-align">
     <div class="websites">
