--- a/classes/band.html
+++ b/classes/band.html
@@ -24,10 +24,16 @@
 </nav>
   
 <aside>
-  <ul>
-    <li><a href="https://dublin.schoology.com/course/2797231033/materials" target="_blank">Schoology</a></li>
-    <li><a href="https://www.charmsoffice.com/public/parents.asp" target="_blank">Charms</a></li>
-  <ul>
+  <div class="band-align">
+    <div class="websites">
+      <h2><u>Concert Band</u></h2>
+      <li><a href="https://dublin.schoology.com/course/2797231033/materials" target="_blank">Schoology</a></li>
+    </div>
+    <div class="websites">
+      <h2><u>Marching Band</u></h2>
+      <li><a href="https://www.charmsoffice.com/public/parents.asp" target="_blank">Charms</a></li>
+    </div>
+  </div>
 </aside>
 
 </body>
