--- a/classes/history.html
+++ b/classes/history.html
@@ -29,14 +29,16 @@
       <h2><u>Essentials</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797231023/materials" target="_blank">Schoology</a></li>
       <li><a href="https://accounts.google.com/o/saml2/initsso?idpid=C042snwgs&spid=407634188412&forceauthn=false" target="_blank">Online Textbook</a></li>
+      <br>
     </div>
     <div class="websites">
       <h2><u>Terms</u></h2>
       <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Chapter 8: Scientific Revolution</a></li>
       <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Chapter 9: French Revolution</a></li>
+      <li><a href="https://quizlet.com/546966390/mwh5-chapter-10-industrialization-flash-cards/" target="_blank">Chapter 10: Industrialization</a></li>
     </div>
   </div>
-    <br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
 </aside>
 
 </body>
