--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <li><a href="https://kahoot.it/" target="_blank">Kahoot</a></li>
       <li><a href="https://www.gimkit.com/play" target="_blank">Gimkit</a></li>
     </div>
-    <div class="websites"
+    <div class="websites">
       <h2><u>Other</u></h2>
       <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
       <li><a href="https://www.youtube.com/playlist?list=PLop0IHXT_frzTWU-goM7y5Xqv-fnXlgyL" target="_blank">Music Playlist</a></li>
