--- a/classes/spanish.html
+++ b/classes/spanish.html
@@ -24,10 +24,14 @@
 </nav>
   
 <aside>
-  <ul>
-    <li><a href="https://dublin.schoology.com/course/2797225371/materials" target="_blank">Schoology</a></li>
-    <li><a href="https://www.wordreference.com/" target="_blank">Word Reference</a></li>
-  <ul>
+  <div class="spanish-align">
+    <div class="websites">
+      <h2><u>Essentials</u></h2>
+      <li><a href="https://dublin.schoology.com/course/2797225371/materials" target="_blank">Schoology</a></li>
+      <li><a href="https://www.wordreference.com/" target="_blank">Word Reference</a></li>
+    </div>
+  </div>
+  <br><br><br><br><br><br><br>
 </aside>
 
 </body>
