--- a/index.html
+++ b/index.html
@@ -34,36 +34,36 @@
       <li><a href="https://dublin.schoology.com/home" target="_blank">Schoology</a></li>
       <li><a href="https://dashboard.dublinschools.net/students/index.php" target="_blank">Student Dashboard</a></li>
       <li><a href="https://www.dublinschools.net/" target="_blank">Dublin Schools</a></li>
-      <br>
-      <br>
-      <br>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
     </div>
     <div class="websites">
       <h2><u>Google</u></h2>
       <li><a href="https://drive.google.com/drive/my-drive" target="_blank">Google Drive</a></li>
       <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a></li>
       <li><a href="https://meet.google.com/" target="_blank">Google Meets</a></li>
-      <br>
-      <br>
-      <br>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
     </div>
     <div class="websites">
       <h2><u>Games</u></h2>
       <li><a href="https://quizlet.com/live" target="_blank">Quizlet Live</a></li>
       <li><a href="https://kahoot.it/" target="_blank">Kahoot</a></li>
       <li><a href="https://www.gimkit.com/play" target="_blank">Gimkit</a></li>
-      <br>
-      <br>
-      <br>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
     </div>
     <div class="websites">
       <h2><u>Other</u></h2>
       <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
       <li><a href="https://www.youtube.com/playlist?list=PLop0IHXT_frzTWU-goM7y5Xqv-fnXlgyL" target="_blank">Music Playlist</a></li>
       <li><a href="https://github.com/" target="_blank">Github</a></li>
-      <br>
-      <br>
-      <br>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
     </div>
   </div>
   <br><br><br><br><br><br><br><br><br><br><br>
