--- a/classes/science.html
+++ b/classes/science.html
@@ -29,9 +29,12 @@
       <h2><u>Essentials</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797228409/materials" target="_blank">Schoology</a></li>
       <li><a href="https://docs.google.com/spreadsheets/d/1JO-YD-voC6x3ABNmdDvMp8kNXs0GSIvevfisHlqodC8/edit?usp=sharing" target="_blank">Agenda</a></li>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
     </div>
   </div>
-  <br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br>
 </aside>
   
 </body>
