--- a/classes/spanish.html
+++ b/classes/spanish.html
@@ -29,9 +29,12 @@
       <h2><u>Essentials</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797225371/materials" target="_blank">Schoology</a></li>
       <li><a href="https://www.wordreference.com/" target="_blank">Word Reference</a></li>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
     </div>
   </div>
-  <br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br>
 </aside>
 
 </body>
