--- a/classes/algebra.html
+++ b/classes/algebra.html
@@ -30,15 +30,19 @@
       <li><a href="https://dublin.schoology.com/course/2797226797/materials" target="_blank">Schoology</a></li>
       <li><a href="https://docs.google.com/spreadsheets/d/1gL2uXfOJPaORFlihcLo1J0y74HmnK-EtBp0GcMVDUXc/edit?usp=sharing" target="_blank">Calander</a></li>
       <li><a href="https://www.aleks.com/" target="_blank">Aleks</a></li>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
     </div>
     <div class="websites">
       <h2><u>Calculators</u></h2>
       <li><a href="https://www.desmos.com/scientific" target="_blank">Scientific Calculator</a></li>
       <li><a href="https://www.desmos.com/calculator" target="_blank">Graphing Calculator</a></li>
-      <br>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
     </div>
   </div>
-  <br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br>
 </aside>
 
 </body>
