--- a/classes/science.html
+++ b/classes/science.html
@@ -24,6 +24,9 @@
 </nav>
   
 <aside>
+  <div class="summary">
+    <p>Websites for Science Class</p>
+  </div>
   <div class="science-align">
     <div class="websites">
       <h2><u>Essentials</u></h2>
