--- a/classes/science.html
+++ b/classes/science.html
@@ -25,7 +25,7 @@
   
 <aside>
   <div class="summary">
-    <p>Websites for Science Class</p>
+    <p>Websites for Science Class.</p>
   </div>
   <div class="science-align">
     <div class="websites">
