--- a/classes/english.html
+++ b/classes/english.html
@@ -24,6 +24,9 @@
 </nav>
   
 <aside>
+  <div class="summary">
+    <p>Websites for English Class.</p>
+  </div>
   <div class="english-align">
     <div class="websites">
       <h2><u>Essentials</u></h2>
