--- a/classes/band.html
+++ b/classes/band.html
@@ -24,6 +24,9 @@
 </nav>
   
 <aside>
+  <div class="summary">
+    <p>Websites for Band Class.</p>
+  </div>
   <div class="band-align">
     <div class="websites">
       <h2><u>Concert Band</u></h2>
