--- a/classes/history.html
+++ b/classes/history.html
@@ -25,7 +25,7 @@
   
 <aside>
   <div class="summary">
-    <p>Websites for Science Class.</p>
+    <p>Websites for History Class.</p>
   </div>
   <div class="history-align">
     <div class="websites">
