--- a/classes/algebra.html
+++ b/classes/algebra.html
@@ -24,6 +24,9 @@
 </nav>
 
 <aside>
+  <div class="summary">
+    <p>Websites for Algebra Class.</p>
+  </div>
   <div class="algebra-align">
     <div class="websites">
       <h2><u>Essentials</u></h2>
