--- a/classes/history.html
+++ b/classes/history.html
@@ -41,7 +41,7 @@
       <h2><u>Terms</u></h2>
       <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Chapter 8: Scientific Revolution</a></li>
       <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Chapter 9: French Revolution</a></li>
-      <li><a href="https://quizlet.com/546966390/mwh5-chapter-10-industrialization-flash-cards/" target="_blank">Chapter 10: Industrialization</a></li>
+      <li><a href="https://quizlet.com/546966390/mwh5-chapter-10-industrial-revolution-flash-cards/" target="_blank">Chapter 10: Industrial Revolution</a></li>
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
     </div>
