--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>This website contains all of the necessary websites I need to use for school.</p>
   </div>
   <br>
-  <div class="home-align">
+  <div class="box-align">
     <div class="websites">
       <h2><u>Dublin</u></h2>
       <li><a href="https://dublin.schoology.com/home" target="_blank">Schoology</a></li>
