--- a/classes/english.html
+++ b/classes/english.html
@@ -28,7 +28,7 @@
     <p>Websites for English Class.</p>
   </div>
   <br>
-  <div class="english-align">
+  <div class="box-align">
     <div class="websites">
       <h2><u>Essentials</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797225916/materials" target="_blank">Schoology</a></li>
@@ -40,6 +40,22 @@
     <div class="websites">
       <h2><u>Documents</u></h2>
       <li><a href="https://docs.google.com/presentation/d/1OuN5uMjwe-Ybmp-uZ8yN6LLi8T-87PW54v10Crm55go/edit?usp=sharing" target="_blank">Reading Journal</a></li>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
