--- a/classes/band.html
+++ b/classes/band.html
@@ -28,7 +28,7 @@
     <p>Websites for Band Class.</p>
   </div>
   <br>
-  <div class="band-align">
+  <div class="box-align">
     <div class="websites">
       <h2><u>Concert Band</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797231033/materials" target="_blank">Schoology</a></li>
@@ -40,6 +40,22 @@
     <div class="websites">
       <h2><u>Marching Band</u></h2>
       <li><a href="https://www.charmsoffice.com/public/parents.asp" target="_blank">Charms</a></li>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
