--- a/classes/history.html
+++ b/classes/history.html
@@ -28,7 +28,7 @@
     <p>Websites for History Class.</p>
   </div>
   <br>
-  <div class="history-align">
+  <div class="box-align">
     <div class="websites">
       <h2><u>Essentials</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797231023/materials" target="_blank">Schoology</a></li>
@@ -42,6 +42,22 @@
       <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Chapter 8: Scientific Revolution</a></li>
       <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Chapter 9: French Revolution</a></li>
       <li><a href="https://quizlet.com/546966390/mwh5-chapter-10-industrial-revolution-flash-cards/" target="_blank">Chapter 10: Industrial Revolution</a></li>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
     </div>
