--- a/classes/spanish.html
+++ b/classes/spanish.html
@@ -28,11 +28,35 @@
     <p>Websites for Spanish Class.</p>
   </div>
   <br>
-  <div class="spanish-align">
+  <div class="box-align">
     <div class="websites">
       <h2><u>Essentials</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797225371/materials" target="_blank">Schoology</a></li>
       <li><a href="https://www.wordreference.com/" target="_blank">Word Reference</a></li>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
