--- a/classes/algebra.html
+++ b/classes/algebra.html
@@ -28,7 +28,7 @@
     <p>Websites for Algebra Class.</p>
   </div>
   <br>
-  <div class="algebra-align">
+  <div class="box-align">
     <div class="websites">
       <h2><u>Essentials</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797226797/materials" target="_blank">Schoology</a></li>
@@ -41,6 +41,22 @@
       <h2><u>Calculators</u></h2>
       <li><a href="https://www.desmos.com/scientific" target="_blank">Scientific Calculator</a></li>
       <li><a href="https://www.desmos.com/calculator" target="_blank">Graphing Calculator</a></li>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
+    </div>
+    <div class="websites">
+      <h2><u>Coming Soon</u></h2>
+      <br><!-- Empty Slot -->
+      <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
