--- a/classes/science.html
+++ b/classes/science.html
@@ -33,7 +33,7 @@
       <h2><u>Essentials</u></h2>
       <li><a href="https://dublin.schoology.com/course/2797228409/materials" target="_blank">Schoology</a></li>
       <li><a href="https://docs.google.com/spreadsheets/d/1JO-YD-voC6x3ABNmdDvMp8kNXs0GSIvevfisHlqodC8/edit?usp=sharing" target="_blank">Agenda</a></li>
-      <br><!-- Empty Slot -->
+      <li><a href="https://ptable.com/?lang=en#Properties" target="_blank">Periodic Table</a></li>
       <br><!-- Empty Slot -->
       <br><!-- Empty Slot -->
     </div>
