--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>School Websites</title>
+<title>About</title>
 <link rel="stylesheet" type="text/css" href="css/pages.css">
 <link rel="stylesheet" type="text/css" href="css/navigation.css">
 </head>
 <body>
 
 <header>
-  <h1>School Websites</h1>
+  <h1>About</h1>
 </header>
 
 <nav>
