--- a/classes/history.html
+++ b/classes/history.html
@@ -39,7 +39,7 @@
       <br><!-- Empty Slot -->
     </div>
     <div class="websites">
-      <h2><u>Terms - First Semester</u></h2>
+      <h2><u>Terms - Part 1</u></h2>
       <li><a href="https://quizlet.com/480449316/mwh5-chapter-8-scientific-revolution-flash-cards/" target="_blank">Chapter 8: Scientific Revolution</a></li>
       <li><a href="https://quizlet.com/535912859/mwh5-chapter-9-french-revolution-flash-cards/" target="_blank">Chapter 9: French Revolution</a></li>
       <li><a href="https://quizlet.com/546966390/mwh5-chapter-10-industrial-revolution-flash-cards/" target="_blank">Chapter 10: Industrial Revolution</a></li>
@@ -47,7 +47,7 @@
       <br><!-- Empty Slot -->
     </div>
     <div class="websites">
-      <h2><u>Terms - Second Semester</u></h2>
+      <h2><u>Terms - Part 2</u></h2>
       <li><a href="https://quizlet.com/559991206/mwh5-chapter-12-imperialism-flash-cards/" target="_blank">Chapter 12: Imperialism</a></li>
       <li><a href="https://quizlet.com/570573161/mwh5-chapter-14-world-war-1-flash-cards/" target="_blank">Chapter 14: World War 1</a></li>
       <br><!-- Empty Slot -->
